# cStr

./: .gitignore  CMakeLists.txt  main.c  readme.md
include/: str.h
src/: str.c
